GNOME Bugzilla – Bug 684218
still says "Loading..." if there is a problem loading
Last modified: 2012-09-25 15:24:13 UTC
Created attachment 224508 [details] screenshot The statusbar still says "Loading..." if there is a problem loading.
Created attachment 224694 [details] [review] slot: ensure the floating bar is hidden when loading finishes Since in case of loading error we don't go through the same code path than in case of success; by using the connection to the end_loading signal, we can ensure the floating bar is removed also in case of error.
Created attachment 224695 [details] [review] slot: consolidate code for showing/hiding the loading floating bar Move all the code relative to it in NautilusWindowSlot, and make the relative object members private.
Attachment 224694 [details] pushed as 6c5b8dc - slot: ensure the floating bar is hidden when loading finishes Attachment 224695 [details] pushed as 0b22ba6 - slot: consolidate code for showing/hiding the loading floating bar