slot: consolidate code for showing/hiding the loading floating bar

Move all the code relative to it in NautilusWindowSlot, and make the
relative object members private.

https://bugzilla.gnome.org/show_bug.cgi?id=684218