src/nautilus-window-slot.h
@@ -67,12 +67,6 @@ struct NautilusWindowSlot {
  	 */
 	GtkWidget *extra_location_widgets;
 
-	GtkWidget *view_overlay;
-	GtkWidget *floating_bar;
-
-	guint set_status_timeout_id;
-	guint loading_timeout_id;
-
 	NautilusView *content_view;
 	NautilusView *new_content_view;
 
